# rudi-pipelines-framework

./: .gitignore  README  README.md  _config.yml
crates/rudi/: Cargo.toml
crates/rudi/examples/: group_by_in_place_parallel.rs  group_by_in_place_serial.rs  group_by_replace_parallel.rs  group_by_replace_serial.rs  stream_in_place_parallel.rs  stream_in_place_serial.rs  stream_replace_parallel.rs  stream_replace_serial.rs  tools_dispatch_main.rs  workflow_streamer_template.rs  workflow_worker_template.rs
crates/rudi/src/: lib.rs
crates/rudi/src/record/: fanner.rs  mod.rs  streamer.rs
crates/rudi/src/workflow/: config.rs  counters.rs  file.rs  log.rs  mod.rs
docs/: compiled-code.md  overview.md  script_utilities.md
docs/workflow_styles.md/: mdi.md  snakemake.md
job_manager/: README.md  initialize.pl
job_manager/lib/: utilities.sh
job_manager/lib/commands/: add.pl  alias.pl  build.pl  cargo.pl  clean.pl  dx.pl  inspect.pl  install.pl  list.pl  ls.pl  serve.pl  ssh.pl  submit.pl  unlock.pl
job_manager/lib/main/: config.pl  help.pl  main.pl  options.pl  rust.pl  singularity.pl
pipeline/: README.md
pipeline/launcher/: build.pl  commands.pl  commands.yml  conda.pl  config.pl  execute.pl  external.pl  git.pl  help.pl  launcher.pl  modules.pl  options.pl  options.yml  rust.pl  utilities.pl  version.pl
pipeline/launcher/lib/: build-common.def  build-suite-apps.def  build-suite-common.def  execute.sh  run-container.sh
pipeline/workflow/: package.pl  workflow.sh
utilities/: delete_directory.pl
