[package]
name = "rudi"
rust-version = "1.92"
edition = "2024"
authors = ["Thomas E. Wilson"]

[dependencies]
csv         = "1.4"
rayon       = "1.11"
crossbeam   = "0.8"
flate2      = "1.1"
paste       = "1.0"
num-format  = "0.4"
chrono      = "0.4"
serde_json  = "1.0"
serde       = { version = "1.0", features = ["derive"] }
rust-htslib = { version = "1.0", features = ["static"] }
glob        = "0.3"
